--- a/views/sinDatos.hbs
+++ b/views/sinDatos.hbs
@@ -4,6 +4,7 @@
     <h1>
        TRABAJANDO SIN CONEXION A LA DATABASE
     </h1>
-   <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <img src="https://www.lucushost.com/blog/wp-content/uploads/2018/11/como-crear-una-pagina-en-construccion.png" alt="">
+   <br><br>
     
 </div>
